--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "normalize.css": "^5.0.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
     "babel-preset-es2015": "^6.24.0",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
