--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "web plugin library make myself. Use grunt, scss, es6...",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "grunt"
   },
   "author": "barton",
   "license": "ISC",
@@ -15,11 +15,17 @@
     "normalize.css": "^5.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
     "babel-preset-es2015": "^6.24.0",
+    "cssnano": "^3.10.0",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-uglify": "^3.0.1",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-postcss": "^0.8.0",
     "grunt-sass": "^2.0.0",
     "load-grunt-tasks": "^3.5.2"
   }
